<?xml version="1.0"?>
<package format="2">
  <name>computer_vision_pkg</name>
  <version>0.0.0</version>
  <description>The vision package</description>
  <maintainer email="nam@todo.todo">nam</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>video_stream_opencv</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python3-opencv</depend>


  <!-- Let Gazebo know where our world files are within this package -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}/world"/>
  </export>


</package>
